fixed spacing

--- a/src/pages/my-credits/shared-credits-layout.scss
+++ b/src/pages/my-credits/shared-credits-layout.scss
@@ -173,7 +173,7 @@
   text-transform: uppercase;
   color: $neutral-dark-gray;
   letter-spacing: $letter-spacing-caps;
-  padding: $space-2 $space-3 $space-1;
+  padding: $space-4 $space-3 $space-2;
   margin: 0 0 (-$space-1) 0;
 }
 
